--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Game</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  I hardly remember any HTML
+  I hardly remember any HTMl, I'm cooked
   <script src="script.js"></script>
 </body>
 
